Быстрый SE16 контейнер для справочников. Парсер RFCOPTIONS.